# ml-fitness-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PR_CICD_DESCRIPTION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_COPY_ME.txt  PR_IMPROVEMENTS_DESCRIPTION.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  recovery_api.py  requirements-dev.txt  requirements.txt  rpe_calculator.py  training_data.json  week2_strength_predictor.py  week3_recovery_api.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_api.py  test_ml_algorithms.py
